--- a/src/data_preparation/Snakefile
+++ b/src/data_preparation/Snakefile
@@ -5,12 +5,13 @@ configfile: "./config.yaml"
 rule all:
     input:
         "results/embeddings/annotations/BRCA_LUAD_STAD_BLCA_COAD_THCA/embeddings.csv",
-        "results/embeddings/cancer/BRCA_LUAD_STAD_BLCA_COAD_THCA/blca_embeddings.csv",
-        "results/embeddings/cancer/BRCA_LUAD_STAD_BLCA_COAD_THCA/brca_embeddings.csv",
-        "results/embeddings/cancer/BRCA_LUAD_STAD_BLCA_COAD_THCA/coad_embeddings.csv",
-        "results/embeddings/cancer/BRCA_LUAD_STAD_BLCA_COAD_THCA/luad_embeddings.csv",
-        "results/embeddings/cancer/BRCA_LUAD_STAD_BLCA_COAD_THCA/stad_embeddings.csv",
-        "results/embeddings/cancer/BRCA_LUAD_STAD_BLCA_COAD_THCA/thca_embeddings.csv",
+        "results/embeddings/rna/BRCA_LUAD_STAD_BLCA_COAD_THCA/blca_embeddings.csv",
+        "results/embeddings/rna/BRCA_LUAD_STAD_BLCA_COAD_THCA/brca_embeddings.csv",
+        "results/embeddings/rna/BRCA_LUAD_STAD_BLCA_COAD_THCA/coad_embeddings.csv",
+        "results/embeddings/rna/BRCA_LUAD_STAD_BLCA_COAD_THCA/luad_embeddings.csv",
+        "results/embeddings/rna/BRCA_LUAD_STAD_BLCA_COAD_THCA/stad_embeddings.csv",
+        "results/embeddings/rna/BRCA_LUAD_STAD_BLCA_COAD_THCA/thca_embeddings.csv",
+        "results/embeddings/mutation_embeddings.csv"
 
 
 # Rule for the first download step with a credentials file path
@@ -18,31 +19,31 @@ rule download_step1:
     output:
         protected("data/rna/BLCA/data.csv")
     shell:
-        "python ./src/data_preparation/0_01_download_cancer_rna_data.py --cancer BLCA --credentials {config[credentials_file]} > {output}"
+        "python ./src/data_preparation/0_01_download_rna_data.py --cancer BLCA --credentials {config[credentials_file]} > {output}"
 
 rule download_step2:
     output:
         protected("data/rna/COAD/data.csv")
     shell:
-        "python ./src/data_preparation/0_01_download_cancer_rna_data.py --cancer COAD --credentials {config[credentials_file]} > {output}"
+        "python ./src/data_preparation/0_01_download_rna_data.py --cancer COAD --credentials {config[credentials_file]} > {output}"
 
 rule download_step3:
     output:
         protected("data/rna/LUAD/data.csv")
     shell:
-        "python ./src/data_preparation/0_01_download_cancer_rna_data.py --cancer LUAD --credentials {config[credentials_file]} > {output}"
+        "python ./src/data_preparation/0_01_download_rna_data.py --cancer LUAD --credentials {config[credentials_file]} > {output}"
 
 rule download_step4:
     output:
         protected("data/rna/STAD/data.csv")
     shell:
-        "python ./src/data_preparation/0_01_download_cancer_rna_data.py --cancer STAD --credentials {config[credentials_file]} > {output}"
+        "python ./src/data_preparation/0_01_download_rna_data.py --cancer STAD --credentials {config[credentials_file]} > {output}"
 
 rule download_step5:
     output:
         protected("data/rna/BRCA/data.csv")
     shell:
-        "python ./src/data_preparation/0_01_download_cancer_rna_data.py --cancer BRCA --credentials {config[credentials_file]} > {output}"
+        "python ./src/data_preparation/0_01_download_rna_data.py --cancer BRCA --credentials {config[credentials_file]} > {output}"
 
 rule download_mutations_data:
     output:
@@ -59,14 +60,14 @@ rule create_rna_embeddings:
         "data/rna/STAD/data.csv",
         "data/rna/BRCA/data.csv"
     output:
-        "results/embeddings/cancer/BRCA_LUAD_STAD_BLCA_COAD_THCA/blca_embeddings.csv",
-        "results/embeddings/cancer/BRCA_LUAD_STAD_BLCA_COAD_THCA/brca_embeddings.csv",
-        "results/embeddings/cancer/BRCA_LUAD_STAD_BLCA_COAD_THCA/coad_embeddings.csv",
-        "results/embeddings/cancer/BRCA_LUAD_STAD_BLCA_COAD_THCA/luad_embeddings.csv",
-        "results/embeddings/cancer/BRCA_LUAD_STAD_BLCA_COAD_THCA/stad_embeddings.csv",
-        "results/embeddings/cancer/BRCA_LUAD_STAD_BLCA_COAD_THCA/thca_embeddings.csv"
+        "results/embeddings/rna/BRCA_LUAD_STAD_BLCA_COAD_THCA/blca_embeddings.csv",
+        "results/embeddings/rna/BRCA_LUAD_STAD_BLCA_COAD_THCA/brca_embeddings.csv",
+        "results/embeddings/rna/BRCA_LUAD_STAD_BLCA_COAD_THCA/coad_embeddings.csv",
+        "results/embeddings/rna/BRCA_LUAD_STAD_BLCA_COAD_THCA/luad_embeddings.csv",
+        "results/embeddings/rna/BRCA_LUAD_STAD_BLCA_COAD_THCA/stad_embeddings.csv",
+        "results/embeddings/rna/BRCA_LUAD_STAD_BLCA_COAD_THCA/thca_embeddings.csv"
     shell:
-        "python ./src/data_preparation/0_04_create_cancer_embeddings.py -c {config[cancers]}"
+        "python ./src/data_preparation/0_04_create_rna_embeddings.py -c BRCA LUAD STAD BLCA COAD THCA"
 
 
 rule create_mutation_embeddings:
@@ -75,7 +76,7 @@ rule create_mutation_embeddings:
     output:
         "results/embeddings/mutation_embeddings.csv"
     shell:
-        "python ./src/data_preparation/0_13_create_mutation_embeddings.py -d {config[mutation_data]}"
+        "python ./src/data_preparation/0_13_create_mutation_embeddings.py -d data/mutations/mutations.csv > {output}"
 
 
 rule download_case_manifest:
@@ -85,7 +86,64 @@ rule download_case_manifest:
         "python ./src/data_preparation/0_03_download_case_manifest.py -d data/annotations/ > {output}"
 
 rule download_annotations:
+    input:
+        "data/annotations/case_manifest.json"
     output:
-        "data/annotations/success.txt"
+        "data/annotations/download_complete.txt"
     shell:
         "python ./src/data_preparation/0_02_download_annotations.py -d data/annotations/ > {output}"
+
+rule extract_text_from_pdf_annotations_1:
+    input:
+        "data/annotations/case_manifest.json",
+        "data/annotations/download_complete.txt"
+    output:
+        "data/annotations/extracted_text_success.txt"
+    shell:
+        "./src/data_preparation/0_07_extract_text_from_pdf.sh > {output}"
+
+
+rule combine_annotations_1:
+    input:
+        "data/annotations/case_manifest.json",
+        "data/annotations/download_complete.txt"
+    output:
+         "data/annotations/BRCA_LUAD_STAD_BLCA_COAD_THCA/embeddings.csv"
+    shell:
+        "python ./src/data_preparation/0_08_combine_annotations.py -c BRCA LUAD STAD BLCA COAD THCA > {output}"
+
+
+rule find_empty_txts:
+    input:
+       "data/annotations/BRCA_LUAD_STAD_BLCA_COAD_THCA/embeddings.csv"
+    output:
+        "data/annotations/empty_txts.csv"
+    shell:
+        "python ./src/data_preparation/0_09_find_empty_txts.py -c BRCA LUAD STAD BLCA COAD THCA > {output}"
+
+rule tesseract_conversion:
+    input:
+        "data/annotations/empty_txts.csv"
+    output:
+       "./data/annotations/BRCA_LUAD_STAD_BLCA_COAD_THCA/tesseract_conversion_success.txt"
+    shell:
+        "./src/data_preparation/0_10_tesseract_conversion.sh 'BRCA LUAD STAD BLCA COAD THCA' > {output}"
+
+
+
+rule final_annotation_combination:
+    input:
+        "data/annotations/tesseract_conversion_success.txt",
+    output:
+        "data/annotations/BRCA_LUAD_STAD_BLCA_COAD_THCA/annotations.csv"
+    shell:
+        "python ./src/data_preparation/0_11_combine_annotations.py -c BRCA LUAD STAD BLCA COAD THCA > {output}"
+
+
+rule create_annotation_embeddings:
+    input:
+        "data/annotations/BRCA_LUAD_STAD_BLCA_COAD_THCA/annotations.csv"
+    output:
+        "results/embeddings/annotations/BRCA_LUAD_STAD_BLCA_COAD_THCA/embeddings.csv"
+    shell:
+        "python ./src/data_preparation/0_12_create_annotation_embeddings.py -c BRCA LUAD STAD BLCA COAD THCA > {output} 2>/dev/null"
