--- a/src/recognizer/models/Snakefile
+++ b/src/recognizer/models/Snakefile
@@ -11,18 +11,15 @@ noise_ratios = config['noise_ratios']
 rule all:
     input:
         expand(
-           f"results/recognizer/simple/{{amount}}/{{noise}}/{{walk_distance}}_embeddings/run_{{iteration}}/metrics.csv",
-            walk_distance=range(3, simple_cancer_max_walk + 1 ),
-            iteration=range(max_run_iterations),
-            amount=amount_of_summed_embeddings,
-            noise=noise_ratios
-        ),
-        expand(
-           f"results/recognizer/simple/{{amount}}/0.0/combined_embeddings/run_{{iteration}}/metrics.csv",
-           iteration=max_run_iterations,
-           amount=amount_of_summed_embeddings,
-        )
+            f"results/recognizer/aggregated_metrics/simple/{{amount}}/metrics.csv",
+            amount=amount_of_summed_embeddings
+            ),
 
+        expand(
+            f"results/recognizer/aggregated_metrics/multi/{{cancers}}/{{amount}}/metrics.csv",
+            amount=amount_of_summed_embeddings,
+            cancers=joined_cancers
+        )
 
 rule run_simple_recognizer:
     input:
@@ -49,11 +46,11 @@ rule run_simple_recognizer:
             for noise in noise_ratios:
                 if max_run_iterations == 1:
                     # Run only once if max_run_iterations is 1
-                    shell(f"python src/recognizer/2_01_simple_recognizer.py -w {walk_distance} -ri 0 -a {amount}")
+                    shell(f"python src/recognizer/models/2_01_simple_recognizer.py -w {walk_distance} -ri 0 -a {amount}")
                 else:
                     # Run multiple times if max_run_iterations > 1
                     for iteration in range(max_run_iterations):
-                        shell(f"python src/recognizer/2_01_simple_recognizer.py -w {walk_distance} -ri {iteration} -a {amount} -n {noise}")
+                        shell(f"python src/recognizer/models/2_01_simple_recognizer.py -w {walk_distance} -ri {iteration} -a {amount} -n {noise}")
 
 
 rule run_simple_recognizer_combined:
@@ -76,18 +73,18 @@ rule run_simple_recognizer_combined:
         # Python loop for control
         if max_run_iterations == 1:
             # Run only once if run_iterations is 1
-            shell(f"python3 src/recognizer/2_01_simple_recognizer.py -w {max_walk_distance} -ri 0 -a {amount} -n 0.0")
+            shell(f"python3 src/recognizer/models/2_01_simple_recognizer.py -w {max_walk_distance} -ri 0 -a {amount} -n 0.0")
         else:
             # Run multiple times if run_iterations > 1
             for iteration in range(run_iterations):
-                shell(f"python3 src/recognizer/2_01_simple_recognizer.py -w {max_walk_distance} -ri {iteration} -a {amount} -n 0.0")
+                shell(f"python3 src/recognizer/models/2_01_simple_recognizer.py -w {max_walk_distance} -ri {iteration} -a {amount} -n 0.0")
 
 
 rule aggregate_simple_recognizer_results:
     input:
         expand(
            f"results/recognizer/simple/{{amount}}/{{noise}}/{{i}}_embeddings/run_{{run_iterations}}/metrics.csv",
-            i=range(3, 31),
+            i=range(3, simple_cancer_max_walk + 1),
             run_iterations=range(0, max_run_iterations + 1),
             noise=noise_ratios,
             amount=amount_of_summed_embeddings
@@ -98,13 +95,13 @@ rule aggregate_simple_recognizer_results:
             amount=amount_of_summed_embeddings
         )
     output:
-        expand("results/recognizer/aggregated_metrics/simple/{{amount}}/metrics.csv",
+         expand(f"results/recognizer/aggregated_metrics/simple/{{amount}}/metrics.csv",
             amount=amount_of_summed_embeddings
-        )
+         )
 
     run:
-        amount_of_summed_embeddings = config['amount_of_summed_embeddings']
-        shell(f"python src/recognizer/3_01_aggregate_run_metrics.py -d results/recognizer/simple/{amount_of_summed_embeddings}")
+        amount = amount_of_summed_embeddings
+        shell(f"python src/recognizer/3_01_aggregate_run_metrics.py -d results/recognizer/simple/{{amount_of_summed_embeddings}}")
 
 rule run_multi_cancer_recognizer:
     input:
@@ -135,11 +132,11 @@ rule run_multi_cancer_recognizer:
             for noise in noise_ratios:
                 if max_run_iterations == 1:
                     # Run only once if max_run_iterations is 1
-                    shell(f"python src/recognizer/2_01_multi_cancer_recognizer.py -w {walk_distance} -ri 0 -a {amount} -c {cancers} -n {noise}")
+                    shell(f"python src/recognizer/models/2_03_multi_cancer_recognizer.py -w {walk_distance} -ri 0 -a {amount} -c {cancers} -n {noise}")
                 else:
                     # Run multiple times if max_run_iterations > 1
                     for iteration in range(max_run_iterations):
-                        shell(f"python src/recognizer/2_01_multi_cancer_recognizer.py -w {walk_distance} -ri {iteration} -a {amount} -c {cancers} -n {noise}")
+                        shell(f"python src/recognizer/models/2_03_multi_cancer_recognizer.py -w {walk_distance} -ri {iteration} -a {amount} -c {cancers} -n {noise}")
 
 
 rule run_multi_cancer_recognizer_combined:
@@ -165,28 +162,33 @@ rule run_multi_cancer_recognizer_combined:
         # Python loop for control
         if max_run_iterations == 1:
             # Run only once if run_iterations is 1
-            shell(f"python3 src/recognizer/2_01_multi_cancer_recognizer.py -w {max_walk_distance} -ri 0 -a {amount} -c {cancers} -n 0.0")
+            shell(f"python3 src/recognizer/models/2_03_multi_cancer_recognizer.py -w {max_walk_distance} -ri 0 -a {amount} -c {cancers} -n 0.0")
         else:
             # Run multiple times if run_iterations > 1
             for iteration in range(run_iterations):
-                shell(f"python3 src/recognizer/2_01_multi_cancer_recognizer.py -w {max_walk_distance} -ri {iteration} -a {amount} -c {cancers} -n 0.0")
+                shell(f"python3 src/recognizer/models/2_03_multi_cancer_recognizer.py -w {max_walk_distance} -ri {iteration} -a {amount} -c {cancers} -n 0.0")
 
 
 
 rule aggregate_multi_recognizer_results:
     input:
         expand(
-           f"results/recognizer/simple_foundation/{config['amount_of_summed_embeddings']}/run_{{j}}/metrics.csv",
-           j=range(config['run_iterations'])
+           f"results/recognizer/multi/{{cancers}}/{{amount}}/0.0/run_{{iteration}}/metrics.csv",
+           iteration=max_run_iterations,
+           amount=amount_of_summed_embeddings,
+           cancers=joined_cancers
         ),
-         expand(
-           f"results/recognizer/simple_foundation/{config['amount_of_summed_embeddings']}/run_{{j}}/split_metrics.csv",
-           j=range(config['run_iterations'])
+        expand(
+           f"results/recognizer/multi/{{cancers}}/{{amount}}/{{noise}}/{{walk_distance}}_embeddings/run_{{iteration}}/metrics.csv",
+            walk_distance=range(3, multi_cancer_max_walk + 1),
+            iteration=range(max_run_iterations),
+            amount=amount_of_summed_embeddings,
+            noise=noise_ratios,
+            cancers=joined_cancers
         )
     output:
-        "results/recognizer/aggregated_metrics/simple_foundation/metrics.csv",
-        "results/recognizer/aggregated_metrics/simple_foundation/split_metrics.csv"
-
-    run:
-        amount_of_embeddings = amount_of_summed_embeddings
-        shell(f"python src/recognizer/3_01_aggregate_run_metrics.py -d results/recognizer/simple_foundation/{amount_of_embeddings}")
+        expand(
+            f"results/recognizer/aggregated_metrics/multi/{{cancers}}/{{amount}}/metrics.csv",
+            amount=amount_of_summed_embeddings,
+            cancers=joined_cancers
+        )
