--- a/src/classifier/plots/Snakefile
+++ b/src/classifier/plots/Snakefile
@@ -20,6 +20,14 @@ rule all:
             cancers=joined_cancers
         ),
         expand(
+            f"figures/classifier/distance_plots/{{cancers}}/cosine_polar.png",
+            cancers=joined_cancers
+        ),
+        expand(
+            f"figures/classifier/distance_plots/{{cancers}}/dot_product_polar.png",
+            cancers=joined_cancers
+        ),
+        expand(
             f"figures/classifier/distance_plots/{{cancers}}/{{cancer}}_euclidean_polar.png",
             cancers=joined_cancers,
             cancer=all_cancers
@@ -63,7 +71,23 @@ rule generate_overall_polar_plots:
             cancers=joined_cancers
         ),
         expand(
+            f"figures/classifier/distance_plots/{{cancers}}/cosine_polar.png",
+            cancers=joined_cancers
+        ),
+        expand(
+            f"figures/classifier/distance_plots/{{cancers}}/dot_product_polar.png",
+            cancers=joined_cancers
+        ),
+        expand(
             f"results/classifier/distances/{{cancers}}/euclidean_combined_distances.csv",
+            cancers=joined_cancers
+        ),
+        expand(
+            f"results/classifier/distances/{{cancers}}/cosine_combined_distances.csv",
+            cancers=joined_cancers
+        ),
+        expand(
+            f"results/classifier/distances/{{cancers}}/dot_product_combined_distances.csv",
             cancers=joined_cancers
         )
     run:
